--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,49 @@
   min-height: 400px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-left: 40px;
+}
+
+/* How do I get the background image to have no space up to the header ?? */
+
+body {
+  color: white;
+  font-family: helvetica, arial;
+}
+
+h1 {
+  font-size: 60px;
+  letter-spacing: 6px;
+  display: inline-block;
+  margin: 0;
+}
+
+h2 {
+  font-size: 80px;
+  letter-spacing: 6px;
+  display: inline-block;
+  margin: 0;
+}
+
+.cta-orange {
+  width: 400px;
+  height: 80px;
+  font-family: helvetica, arial;
+  font-size: 30px;
+  background-color: rgb(254, 169, 51);
+  color: black;
+  letter-spacing: 3px;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.cta-orange a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .sale {}
