--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+main {
+  margin-top: 140px;
+}
+
 .banner {
   background-image: url(/assets/images/banner-image.jpg);
   min-height: 400px;
@@ -9,43 +13,53 @@
   padding-left: 40px;
   padding-bottom: 20px;
   justify-content: flex-end;
+  color: white;
 }
 
 body {
-  color: white;
   font-family: helvetica, arial;
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 40px;
   letter-spacing: 6px;
   display: inline-block;
   margin: 0;
+  font-weight: 300;
 }
 
 h2 {
-  font-size: 80px;
+  font-size: 68px;
   letter-spacing: 6px;
   display: inline-block;
   margin: 0;
   padding-bottom: 40px;
 }
 
-p {
-  font-family: helvetica, arial;
+.title {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.underline {
+  text-decoration: underline;
 }
 
 .cta-orange {
-  width: 400px;
-  height: 80px;
-  font-family: helvetica, arial;
-  font-size: 30px;
+  width: 300px;
+  height: 60px;
+  font-family: helvetica, arial, sans-serif;
+  font-size: 24px;
   background-color: rgb(254, 169, 51);
   color: black;
   letter-spacing: 3px;
   border: none;
   border-radius: 6px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cta-orange a {
@@ -53,39 +67,139 @@ p {
   color: inherit;
 }
 
+.cta-blue {
+  width: 200px;
+  height: 40px;
+  font-family: Helvetica, arial, sans-serif;
+  font-size: 16px;
+  background-color: rgb(46, 72, 107);
+  color: white;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cta-blue a {
+  text-decoration: none;
+  color: inherit;
+}
+
 
 
 .sale {
-  display: flex;
-  flex-direction: row;
-  margin: 40px 100px 40px 100px;
-  max-width: 1300px;
+  display: grid;
+  grid-template-columns: 500px 500px;
+  grid-template-rows: 178px;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color: white;
 }
 
 .sale-info {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   background-color: rgb(46, 72, 107);
   border-radius: 10px;
-  width: 500px;
   padding-left: 20px;
 }
 
+.sale-title {
+  font-size: 30px;
+}
+
+.sale-text {
+  font-size: 40px;
+  font-weight: 200;
+}
+
+.sale-percent {
+  font-size: 70px;
+  align-self: flex-end;
+  padding-right: 20px;
+}
+
+.orange {
+  color: rgb(254, 169, 51);
+  text-transform: uppercase;
+}
+
 .sale-image {
+  max-width: 100%;
   border-radius: 10px;
-  max-width: 600px;
+}
+
+.shop {
+  margin-bottom: 50px;
+}
+
+.shop-section {
+  display: grid;
+  grid-template-columns: 470px 470px;
+  grid-gap: 60px;
+  justify-content: center;
+}
+
+.shop-image {
+  max-width: 100%;
+  border-radius: 6px;
+}
+
+.shop-container {
+  background-color: rgb(46, 72, 107);
+  color: white;
+  border-radius: 6px;
+  font-size: 16px;
+}
+
+.shop-container-info {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 10px;
+  align-items: center;
 }
 
 
 
-.shop {}
 
-.shop-womens {}
+.activity {
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-.shop-mens {}
+.activity-section {
+  display: grid;
+  grid-template-columns: 320px 320px 320px;
+  grid-gap: 18px;
+  margin-bottom: 20px;
+}
 
-.activity {}
+.activity-container {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(46, 72, 107);
+  color: white;
+  align-items: center;
+  border-radius: 6px;
+}
 
+.activity-image {
+  max-width: 100%;
+  border-radius: 6px;
+}
+
+.activity-button {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+}
 
 /*Shoud the buttons be on the general css??*/
 
