--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,7 @@ footer {
   grid-template-columns: 50px 200px 200px 350px;
   justify-content: space-between;
   padding: 30px;
+  font-family: helvetica, arial, sans-serif;
 }
 
 footer ul {
