--- a/css/general.css
+++ b/css/general.css
@@ -21,3 +21,23 @@ p {
   color: rgb(254, 169, 51);
   text-transform: uppercase;
 }
+
+.cta-blue {
+  width: 200px;
+  height: 40px;
+  font-family: Helvetica, arial, sans-serif;
+  font-size: 16px;
+  background-color: rgb(46, 72, 107);
+  color: white;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cta-blue a {
+  text-decoration: none;
+  color: inherit;
+}
