--- a/css/general.css
+++ b/css/general.css
@@ -35,9 +35,37 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  /*Need to add the transition background color*/
 }
 
 .cta-blue a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.cta-orange {
+  width: 300px;
+  height: 60px;
+  font-family: helvetica, arial, sans-serif;
+  font-size: 24px;
+  background-color: rgb(254, 169, 51);
+  color: black;
+  letter-spacing: 3px;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-property: background;
+  transition-duration: 0.3s;
+}
+
+.cta-orange:hover {
+  background-color: rgb(255, 189, 71); /*another transition color?*/
+}
+
+.cta-orange a {
   text-decoration: none;
   color: inherit;
 }
