--- a/css/home.css
+++ b/css/home.css
@@ -42,48 +42,6 @@ h2 {
   text-decoration: underline;
 }
 
-.cta-orange {
-  width: 300px;
-  height: 60px;
-  font-family: helvetica, arial, sans-serif;
-  font-size: 24px;
-  background-color: rgb(254, 169, 51);
-  color: black;
-  letter-spacing: 3px;
-  border: none;
-  border-radius: 6px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.cta-orange a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.cta-blue {
-  width: 200px;
-  height: 40px;
-  font-family: Helvetica, arial, sans-serif;
-  font-size: 16px;
-  background-color: rgb(46, 72, 107);
-  color: white;
-  border: none;
-  border-radius: 6px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.cta-blue a {
-  text-decoration: none;
-  color: inherit;
-}
-
-
 
 .sale {
   display: grid;
@@ -141,7 +99,7 @@ h2 {
 }
 
 .shop-container {
-  background-color: rgb(46, 72, 107);
+  background-color: rgb(46, 72, 107); /*tried using variables here, but it didnt work ... maybe import the stylesheet _variables for this css stylesheet or on the home page?*/
   color: white;
   border-radius: 6px;
   font-size: 16px;
