--- a/css/general.css
+++ b/css/general.css
@@ -14,10 +14,10 @@ html, body {
 main {
   margin-top: 160px;
   margin-bottom: 120px;
+  font-family: helvetica, arial, sans-serif;
 }
 
 p {
-  font-family: helvetica, Arial, sans-serif;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -33,6 +33,9 @@ p {
   font-weight: 700;
 }
 
+.underline {
+  text-decoration: underline;
+}
 
 .cta-blue {
   width: 200px;
