--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@
   min-height: 400px;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
+  /* I had position=relative here, why? */
   display: flex;
   flex-direction: column;
   padding-left: 40px;
@@ -12,72 +12,102 @@
   color: white;
 }
 
-body {
-  font-family: helvetica, arial;
-}
-
 h1 {
-  font-size: 40px;
+  font-size: 30px;
   letter-spacing: 6px;
   display: inline-block;
   margin: 0;
   font-weight: 300;
+  padding-bottom: 10px;
 }
 
 h2 {
-  font-size: 68px;
+  font-size: 44px;
   letter-spacing: 6px;
   display: inline-block;
   margin: 0;
   padding-bottom: 40px;
 }
 
-.title {
+@media only screen and (min-width: 701px) {
+  h1 {
+    font-size: 35px;
+  }
+
+  h2 {
+    font-size: 60px;
+  }
+}
+
+.title { /* Used for "Shop our latest trends" and "Shop by activity" */
   font-size: 24px;
   text-align: center;
   margin-bottom: 20px;
 }
 
+
+/* SALE */
+
 .sale {
-  display: grid;
-  grid-template-columns: 400px 500px;
-  grid-template-rows: 178px;
-  justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin: 50px;
+  background-color: rgb(46, 72, 107);
+  display: flex;
+  flex-direction: column-reverse;
   color: white;
+  border-radius: 10px;
 }
 
 .sale-info {
+  padding: 10px;
+  height: 70px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  background-color: rgb(46, 72, 107);
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  padding-left: 20px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .sale-title {
   font-size: 30px;
+  padding-bottom: 6px;
 }
 
 .sale-text {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 200;
+ 
 }
 
 .sale-percent {
-  font-size: 70px;
-  align-self: flex-end;
-  padding-right: 20px;
+  font-size: 44px;
+  display: flex;
+  align-items: flex-end;
 }
 
 .sale-image {
-  max-width: 100%;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  width: 100%;
+  border-radius: 10px;
 }
+
+@media only screen and (min-width: 701px) {
+  /* THE MEDIA QUERIE FOR DESKTOP SALE */
+  .sale {
+    flex-direction: row;
+    margin-left: 140px;
+    margin-right: 140px;
+  }
+
+  .sale-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 800px;
+  }
+}
+
+
+
+
+/* SHOP WOMENS AND MENS */
+
 
 .shop {
   margin-bottom: 50px;
@@ -117,6 +147,7 @@ h2 {
 
 
 
+/* SHOP BY ACTIVITY */
 
 .activity {
   margin-bottom: 50px;
