--- a/css/about.css
+++ b/css/about.css
@@ -1,39 +1,46 @@
 main {
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 250px;
 }
 
-.about-banner {
-  max-width: 1200px;
-  margin-bottom: 20px;
+.about-us {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
-.about-welcome {
-  font-size: 1.3em;
+.about-us p {
+  margin-top: 1em;
 }
 
-.our-story p{
-  margin-bottom: 20px;
-  font-size: 1.3em;
-}
-
-.about-bottom {
-  display: grid;
-  grid-template-columns: 60% 40%;
-  margin-top: 40px;
-}
-
-.about-bottom p {
-  margin-bottom: 30px;
-  font-size: 1.3em;
-}
-
-.philosophy {
-  margin-right: 40px;
-}
-
-.about-image {
+.about-us img {
   max-width: 100%;
-  border-radius: 6px;
-  margin-top: 20px;
+}
+
+.about-end {
+ 
+}
+
+@media only screen and (min-width: 701px) {
+  main {
+    margin-left: 140px;
+    margin-right: 140px;
+    margin-top: 140px;
+  }
+  
+  .about-end {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 1em;
+  }
+
+  .about-end-img {
+    flex: 1;
+  }
+
+  .about-end-text {
+    flex: 1;
+  }
 }
