--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,7 @@
+/*
+THIS STYLESHEET IS ONLY FOR: about-us.html
+*/
+
 main {
   margin-left: 50px;
   margin-right: 50px;
@@ -16,10 +20,6 @@ main {
 
 .about-us img {
   max-width: 100%;
-}
-
-.about-end {
- 
 }
 
 @media only screen and (min-width: 701px) {
