--- a/css/shop.css
+++ b/css/shop.css
@@ -43,21 +43,20 @@ h1 {
 }
 
 
-/*XPLORER FLEECE JACKET*/
+/*XPLORER FLEECE JACKET, PRODUCT SPECIFIC*/
 
-.product-specific {
+.product-info {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 1em;
 }
 
-.product-specific p {
+.product-info p {
   margin-bottom: 1em;
 }
 
 .product-image-container {
   max-width: 400px;
-  align-self: center;
 }
 
 .product-image {
@@ -65,19 +64,49 @@ h1 {
 }
 
 .product-specific select {
-  width: 100%;
   border: 1px solid rgb(46, 72, 107);
   height: 2em;
 }
 
 .product-specific a {
-  width: 100%;
   margin-top: 0.5em;
 }
 
 @media only screen and (max-width: 700px) {
+
+.product-specific {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+  .product-specific select,
+  .product-specific a {
+    width: 100%;
+  }
+
+  .product-image-container {
+    align-self: center;
+  }
 }
 
 @media only screen and (min-width: 701px) {
+  .product-specific {
+    display: flex;
+    flex-direction: row;
+    gap: 3em;
+  }
 
+  .product-info {
+    max-width: 700px;
+    min-width: 200px;
+  }
+
+  .product-image {
+    min-width: 200px;
+  }
+
+  .product-specific select,
+  .product-specific a {
+    width: 40%;
+  }
 }
