--- a/css/general.css
+++ b/css/general.css
@@ -40,7 +40,28 @@ a {
   }
 }
 
-.breadcrumbs {}
+/* BREADCRUMBS */
+
+.breadcrumbs {
+  border-bottom: 1px solid black;
+}
+
+.breadcrumbs ul {
+  padding: 0;
+}
+
+.breadcrumbs li {
+  display: inline;
+}
+
+.breadcrumbs a {
+  color: black;
+}
+
+.breadcrumbs li:not(:last-child):after {
+  content: '>';
+  margin: 20px;
+}
 
 
 
