--- a/css/shop.css
+++ b/css/shop.css
@@ -78,6 +78,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1em;
+  margin-top: 14px;
 }
   .product-specific select,
   .product-specific a {
@@ -94,6 +95,7 @@ h1 {
     display: flex;
     flex-direction: row;
     gap: 3em;
+    margin-top: 14px;
   }
 
   .product-info {
