--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -17,6 +17,10 @@ h1 {
   /*justify-content center only on desktop*/
 }
 
+h2 {
+  margin: 0;
+}
+
 @media only screen and (min-width: 701px) {
   main {
     margin-left: 140px;
@@ -33,65 +37,86 @@ h1 {
 
 
 /* CONTACT US */
-.contact-us {
+
+.contact-head {
   display: flex;
   flex-direction: column;
-  gap: 34px;
-  margin-left: 80px;
-  max-width: 550px;
+  gap: 1em;
 }
 
-.customer-support,
-.connect {
-  border: 1px solid rgb(46, 72, 107);
-  border-radius: 6px;
+.contact-support,
+.contact-connect {
   display: flex;
   flex-direction: column;
-  max-width: 350px;
-  padding: 20px;
+  gap: 2em;
+}
+
+.contact-container {
+  border: 1px solid rgb(46, 72, 107);
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  padding: 1em 0.3em;
+  margin-top: 2em;
+  gap: 1em;
+  min-height: 315px;
 }
 
-.icon {
-  width: 24px;
-}
-
-.support-type,
-.connect-type {
-  display: grid;
-  grid-template-columns: 40px 200px;
-  column-gap: 50px;
-  padding-bottom: 20px;
-  padding-top: 20px;
-}
-
-.connect-input {
-  width: 186px;
-  height: 20px;
-  border-radius: 6px;
-  border: 1px solid rgb(46, 72, 107);
-  padding-left: 10px;
-  margin-bottom: 10px;
-}
-
-.connect-newsletter {
-  padding-left: 86px;
-}
-
-.contact-boxes {
+.contact-type {
   display: flex;
-  flex-direction: column;
-  gap: 50px;
+  align-items: center;
+  justify-content: start;
+  gap: 2em;
+  min-width: 264px;
 }
 
-.contact-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 160px;
+.contact-icon {
+  max-width: 38px;
 }
+
+.contact-text p {
+  padding-bottom: 1em;
+}
+
+.contact-flex {
+  display: flex;
+}
+
+.contact-connect input {
+  height: 2em;
+  width: 50%;
+  padding-left: 10px;
+  border: 1px solid rgb(46, 72, 107);
+  border-radius: 4px;
+}
+
+.contact-connect button {
+  width: 50%;
+}
+
+/*Mobile styles (example)*/
+@media only screen and (max-width: 700px) {
+  .contact-flex {
+    flex-direction: column;
+  }
+}
+
+/*Desktop styles (example)*/
+@media only screen and (min-width: 701px) {
+  .contact-flex {
+    flex-direction: row;
+    gap: 2em;
+  }
+}
+
+
 
 
 /* CONTACT FORM */
+
+
 
 
 
