--- a/css/checkout.css
+++ b/css/checkout.css
@@ -30,18 +30,7 @@ h1 {
 
 /*CHECKOUT*/
 
-@media only screen and (max-width: 700px) {
-  .checkout-flex {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-@media only screen and (min-width: 701px) {
-  .checkout-flex {
-    display: grid;
-  }
-}
+/* I havent really figured out how to change to another flex/grid in desktop view ... */
 
 .checkout-title {
   display: flex;
