--- a/css/home.css
+++ b/css/home.css
@@ -1,21 +1,17 @@
 .banner {
   background-image: url(/assets/images/banner-image.jpg);
-  min-height: 400px;
   background-repeat: no-repeat;
   background-size: cover;
-  /* I had position=relative here, why? */
+  color: white;
+  padding: 150px 0 40px 40px;
+  margin: 0 0 40px 0;
   display: flex;
   flex-direction: column;
-  padding-left: 40px;
-  padding-bottom: 20px;
-  justify-content: flex-end;
-  color: white;
-  margin-bottom: 50px;
 }
 
 h1 {
-  font-size: 30px;
-  letter-spacing: 6px;
+  font-size: 1.875rem;
+  letter-spacing: 0.375rem;
   display: inline-block;
   margin: 0;
   font-weight: 300;
@@ -23,11 +19,26 @@ h1 {
 }
 
 h2 {
-  font-size: 44px;
-  letter-spacing: 6px;
+  font-size: 2.75rem;
+  letter-spacing: 0.375rem;
   display: inline-block;
   margin: 0;
   padding-bottom: 40px;
+}
+
+.title { /* Used for "Shop our latest trends" and "Shop by activity" */
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
+.sale,
+.shop,
+.activity {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
 }
 
 @media only screen and (min-width: 701px) {
@@ -38,92 +49,69 @@ h2 {
   h2 {
     font-size: 60px;
   }
-}
 
-.title { /* Used for "Shop our latest trends" and "Shop by activity" */
-  font-size: 24px;
-  text-align: center;
-  margin-bottom: 20px;
+  .sale,
+  .shop,
+  .activity {
+    margin-left: 140px;
+    margin-right: 140px;
+  }
 }
 
 
 /* SALE */
 
 .sale {
-  margin-left: 50px;
-  margin-right: 50px;
   background-color: rgb(46, 72, 107);
+  color: white;
   display: flex;
   flex-direction: column-reverse;
-  color: white;
   border-radius: 10px;
-  margin-bottom: 50px;
 }
 
 .sale-info {
   padding: 10px;
-  height: 70px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 
 .sale-title {
-  font-size: 30px;
-  padding-bottom: 6px;
+  font-size: 1.875rem;
 }
 
 .sale-text {
-  font-size: 30px;
-  font-weight: 200;
- 
+  font-size: 1.875rem;
+  font-weight: 200; 
 }
 
 .sale-percent {
-  font-size: 44px;
-  display: flex;
-  align-items: flex-end;
+  font-size: 2.75rem;
 }
 
 .sale-image {
-  width: 100%;
   border-radius: 10px;
+  max-width: 100%;
 }
 
 @media only screen and (min-width: 701px) {
-  /* THE MEDIA QUERIE FOR DESKTOP SALE */
   .sale {
     flex-direction: row;
-    min-width: 800px;
-    min-height: 100px;
-    margin-left: 140px;
-    margin-right: 140px;
   }
 
   .sale-info {
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 800px;
   }
 }
-
 
 
 
 /* SHOP WOMENS AND MENS */
 
-
-.shop {
-  margin-bottom: 50px;
-}
-
 .shop-section {
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  margin-left: 50px;
-  margin-right: 50px;
+  gap: 20px;
 }
 
 .shop-image {
@@ -132,10 +120,10 @@ h2 {
 }
 
 .shop-container {
-  background-color: rgb(46, 72, 107); /*tried using variables here, but it didnt work ... maybe import the stylesheet _variables for this css stylesheet or on the home page?*/
+  background-color: rgb(46, 72, 107);
   color: white;
   border-radius: 6px;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .shop-container-info {
@@ -148,34 +136,22 @@ h2 {
 .shop-container-info a {
   width: 200px;
   height: 40px;
-  font-size: 1em;
+  font-size: 0.9rem;
 }
 
 @media only screen and (min-width: 701px) {
   .shop-section {
     flex-direction: row;
-    gap: 40px;
-    margin-left: 140px;
-    margin-right: 140px;  
+  }
 }
-}
-
 
 
 /* SHOP BY ACTIVITY */
-
-.activity {
-  margin-bottom: 50px;
-  justify-content: center;
-  align-items: center;
-}
 
 .activity-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
-  margin-left: 50px;
-  margin-right: 50px;
 }
 
 .activity-container {
@@ -198,13 +174,11 @@ h2 {
   height: 40px;
   display: flex;
   align-items: center;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 @media only screen and (min-width: 701px) {
   .activity-section {
-    margin-right: 140px;
-    margin-left: 140px;
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
