--- a/css/general.css
+++ b/css/general.css
@@ -31,8 +31,6 @@ a {
   text-decoration: none;
 }
 
-
-
 @media only screen and (min-width: 701px) {
   main {
     margin-top: 130px;
@@ -104,6 +102,7 @@ a {
 
 .cta-blue:hover {
   background-color: rgb(66, 92, 127);
+  cursor: pointer;
 }
 
 .cta-orange {
@@ -126,7 +125,8 @@ a {
 }
 
 .cta-orange:hover {
-  background-color: rgb(255, 189, 71); /*another transition color?*/
+  background-color: rgb(255, 189, 71);
+  cursor: pointer;
 }
 
 /*Mobile styles (example)*/
