--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -1,6 +1,7 @@
 /* HEADER */
 
 /* Have the input like on the course I took, so that it reduces in size */
+/* On firefox and chrome the button on top of the input in the footer gets all weird when the input is active ... */
 
 header {
   background-color: rgb(46, 72, 107);
