--- a/css/_variables.css
+++ b/css/_variables.css
@@ -4,6 +4,7 @@
 
   --text-color-white: rgb(255, 255, 255);
 
-  --font-family: helvetica, arial, sans-serif;
+  --font-family-helvetica: helvetica, arial, sans-serif;
 }
-/* Need to learn more about variables ... */
+
+/* More variables ? */
