--- a/css/content.css
+++ b/css/content.css
@@ -47,8 +47,8 @@ h2 {
 }
 
 .shop-container {
-  background-color: rgb(46, 72, 107);
-  color: white;
+  background-color: var(--Rainydays-blue);
+  color: var(--text-color-white);
   padding: 1em;
   border-radius: 4px;
 }
@@ -85,7 +85,8 @@ h2 {
 }
 
 .product-specific select {
-  border: 1px solid rgb(46, 72, 107);
+  border: 1px solid var(--Rainydays-blue);
+  border-radius: 2px;
   height: 2em;
 }
 
@@ -148,8 +149,8 @@ h2 {
 }
 
 .checkout-number {
-  background-color: rgb(46, 72, 107);
-  color: white;
+  background-color: var(--Rainydays-blue);
+  color: var(--text-color-white);
   display: inline;
   padding: 0.5em 0.8em;
   border-radius: 4px;
@@ -157,7 +158,7 @@ h2 {
 
 .delivery-container,
 .payment-container {
-  border: 2px solid rgb(46, 72, 107);
+  border: 2px solid var(--Rainydays-blue);
   border-radius: 4px;
   padding: 1em;
   display: flex;
@@ -165,7 +166,7 @@ h2 {
 } /* add the .checkout-container, .shipping-information-container and the .shopping-cart-container? All containers can be compressed*/
 
 .shopping-cart-container {
-  border: 2px solid rgb(46, 72, 107);
+  border: 2px solid var(--Rainydays-blue);
   border-radius: 4px;
   padding: 1em;
   display: flex;
@@ -196,7 +197,7 @@ h2 {
 .shipping-information-container form {
   display: flex;
   flex-direction: column;
-  border: 2px solid rgb(46, 72, 107);
+  border: 2px solid var(--Rainydays-blue);
   border-radius: 4px;
   padding: 1em 3em;
 }
@@ -207,7 +208,7 @@ h2 {
   margin-bottom: 1em;
   padding-left: 0.5em;
   height: 2em;
-  border: 1px solid rgb(46, 72, 107);
+  border: 1px solid var(--Rainydays-blue);
   border-radius: 2px;
   font-size: 1em
 }
@@ -250,7 +251,7 @@ h2 {
 
 .checkout-container {
   position: relative;
-  border: 2px solid rgb(46, 72, 107);
+  border: 2px solid var(--Rainydays-blue);
   border-radius: 4px;
   padding: 2em;
   display: flex;
@@ -291,7 +292,7 @@ h2 {
 }
 
 .checkmark {
-  border: 6px solid rgb(255, 189, 71);
+  border: 6px solid var(--Rainydays-orange);
   padding: 1em 2em;
   border-radius: 4px;
 }
@@ -366,7 +367,7 @@ h2 {
 }
 
 .contact-container {
-  border: 1px solid rgb(46, 72, 107);
+  border: 2px solid var(--Rainydays-blue);
   border-radius: 4px;
   display: flex;
   flex-direction: column;
@@ -402,7 +403,7 @@ h2 {
   height: 2em;
   width: 50%;
   padding-left: 10px;
-  border: 1px solid rgb(46, 72, 107);
+  border: 1px solid var(--Rainydays-blue);
   border-radius: 4px;
 }
 
@@ -446,7 +447,7 @@ h2 {
 .contact-form-message textarea {
   padding-left: 0.6em;
   margin-bottom: 1em;
-  border: 2px solid rgb(46, 72, 107);
+  border: 2px solid var(--Rainydays-blue);
   border-radius: 4px;
 }
 
@@ -456,7 +457,7 @@ h2 {
 
 .contact-form-message textarea {
   height: 236px;
-  font-family: helvetica, arial, sans-serif;
+  font-family: var(--font-family-helvetica);
   padding-top: 0.5em;
 }
 
