--- a/css/general.css
+++ b/css/general.css
@@ -23,7 +23,7 @@ p {
 main {
   margin-top: 230px;
   margin-bottom: 50px;
-  font-family: helvetica, arial, sans-serif;
+  font-family: var(--font-family-helvetica);
 }
 
 a {
@@ -65,7 +65,7 @@ a {
 /* SPAN CLASSES */
 
 .orange {
-  color: rgb(254, 169, 51);
+  color: var(--Rainydays-orange);
   text-transform: uppercase;
 }
 
@@ -86,8 +86,8 @@ a {
   height: 40px;
   font-family: Helvetica, arial, sans-serif;
   font-size: 16px;
-  background-color: rgb(46, 72, 107);
-  color: white;
+  background-color: var(--Rainydays-blue);
+  color: var(--text-color-white);
   border: none;
   border-radius: 6px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -109,7 +109,7 @@ a {
   height: 60px;
   font-family: helvetica, arial, sans-serif;
   font-size: 24px;
-  background-color: rgb(254, 169, 51);
+  background-color: var(--Rainydays-orange);
   color: black;
   letter-spacing: 3px;
   border: none;
