--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -4,7 +4,7 @@
 /* On firefox and chrome the button on top of the input in the footer gets all weird when the input is active ... */
 
 header {
-  background-color: rgb(46, 72, 107);
+  background-color: var(--Rainydays-blue);
   position: fixed;
   top: 0;
   right: 0;
@@ -86,7 +86,7 @@ header {
     bottom: -4000px;
     width: 165px;
     z-index: 2;
-    background-color: rgb(46, 72, 107);
+    background-color: var(--Rainydays-blue);
   }
   
   .hamburger-menu-links li {
@@ -136,7 +136,7 @@ header {
 
   .desktop-nav a {
     text-decoration: none;
-    color: white;
+    color: var(--text-color-white);
     font-family: helvetica, arial, sans-serif;
     font-size: 1.3em;
   }
@@ -155,7 +155,7 @@ header {
     /* Have the width in % so that it changes? */
     border: none;
     border-radius: 6px;
-    font-family: helvetica, arial, sans-serif;
+    font-family: var(font-family-helvetica);
     font-size: 1em;
     padding-left: 10px;
   }
@@ -178,11 +178,11 @@ header {
 /* I the middle between mobile and desktop all the words scramble together ... */
 
 footer {
-  background-color: rgb(46, 72, 107);
+  background-color: var(--Rainydays-blue);
   display: flex;
   flex-direction: column;
-  color: white;
-  font-family: helvetica, arial, sans-serif;
+  color: var(--text-color-white);
+  font-family: var(--font-family-helvetica);
   font-size: 1em;
   padding-bottom: 10px;
 }
@@ -209,7 +209,7 @@ footer {
 
 .our-world a {
   text-decoration: none;
-  color: white;
+  color: var(--text-color-white);
 }
 
 .follow-us {
@@ -273,7 +273,7 @@ footer {
     position: absolute;
     top: 0px;
     left: 65%;
-    background-color: rgb(254, 169, 51);
+    background-color: var(--Rainydays-orange);
     padding: 3.5px 12px;
     border-radius: 6px;
   }  
@@ -310,7 +310,7 @@ footer {
   }
 
   .desktop-newsletter-button {
-    background-color: rgb(254, 169, 51);
+    background-color: var(--Rainydays-orange);
     padding: 3.5px 12px;
     border-radius: 6px;
     position: absolute;
