--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -1,7 +1,6 @@
 /* HEADER */
 
 /* Have the input like on the course I took, so that it reduces in size */
-/* On firefox and chrome the button on top of the input in the footer gets all weird when the input is active ... */
 
 header {
   background-color: var(--Rainydays-blue);
@@ -15,6 +14,7 @@ header {
 .active {
   text-decoration: underline;
 }
+/*This doesnt work for some reason*/
 
 .header-top {
   display: flex;
@@ -38,6 +38,11 @@ header {
   margin-top: 10px;
   padding-left: 10px;
   font-size: 1em;
+}
+
+.search-field-desktop input:focus,
+.search-field-mobile input:focus {
+  outline: none;
 }
 
 .search-field-mobile .search-icon {
@@ -264,6 +269,10 @@ footer {
     padding-left: 10px;
     font-size: 1em;
   }
+
+  .newsletter-mail input:focus {
+    outline: none;
+  }
   
   .newsletter-mail {
     position: relative;
@@ -303,6 +312,10 @@ footer {
     border: none;
     padding-left: 10px;
     font-size: 1em;
+  }
+
+  .desktop-newsletter-mail-input:focus {
+    outline: none;
   }
 
   .desktop-newsletter-mail {
