--- a/css/home.css
+++ b/css/home.css
@@ -64,43 +64,60 @@ h2 {
 .sale {
   background-color: var(--Rainydays-blue);
   color: var(--text-color-white);
-  display: flex;
-  flex-direction: column-reverse;
   border-radius: 10px;
+  display: flex;
 }
 
 .sale-info {
   padding: 10px;
   display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sale-title {
-  font-size: 1.875rem;
+  font-size: 1.8rem;
 }
 
 .sale-text {
   font-size: 1.875rem;
-  font-weight: 200; 
+  font-weight: 200;
 }
 
 .sale-percent {
-  font-size: 2.75rem;
+  font-size: 2.6rem;
 }
 
 .sale-image {
   border-radius: 10px;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.sale-image-container {
+  min-height: 109px;
+  min-width: 300px;
+}
+
+
+@media only screen and (max-width: 700px) {
+  .sale {
+    flex-direction: column-reverse;
+  }
 }
 
 @media only screen and (min-width: 701px) {
   .sale {
-    flex-direction: row;
+    flex: row;
+    align-items: center;
   }
 
   .sale-info {
-    flex-direction: column;
+    flex: 2;
+  }
+
+  .sale-image-container {
+    flex: 1;
   }
 }
 
